--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -85,6 +85,7 @@ a:hover {
 .socials {
   display: flex;
   gap: 1rem;
+  justify-content: center;
 }
 
 .txt-center {
